--- a/english.html
+++ b/english.html
@@ -1,44 +1,44 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-Accommodate">
     <title>English Quiz</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; }
-        h2 { color: #2c3e50; }
         .question { margin-bottom: 20px; }
-        .question input[type="radio"] { transform: scale(1.5); margin-right: 10px; }
-        #submitBtn { font-size: 20px; padding: 10px 20px; background-color: #34AcomodateAccommodatedb; color: white; border: none; border-radius: 5px; }
-        .explanation { color: #e74c3c; margin-top: 5px; }
+        .submit-btn { font-size: 20px; padding: 10px; }
+        input[type="radio"] { transform: scale(1.5); margin: 10px; }
+        .explanation { color: green; margin-top: 10px; }
     </style>
 </head>
 <body>
-    <h2>English Quiz</h2>
+    <h1>English Quiz</h1>
     <form id="quizForm">
-        <div class="question" data-answer="b" data-explanation="The correct answer is B because ‘Accommodate’ is the correct spelling..">
-            <p>1. Choose the correctly spelled word:</p>
-            <label><input type="radio" name="q1" value="a"> Acommodate</label><br>
-            <label><input type="radio" name="q1" value="b"> Accommodate</label><br>
-            <label><input type="radio" name="q1" value="c"> Acomodate</label>
-        </div>
-        <!-- Add 14 more questions similarly -->
-        <button type="button" id="submitBtn" onclick="submitQuiz()">Submit</button>
+<div class="question">
+<p>Choose the correct sentence.</p>
+<label><input type="radio" name="q0" value="He go to school every day."> He go to school every day.</label><br>
+<label><input type="radio" name="q0" value="He goes to school every day."> He goes to school every day.</label><br>
+<label><input type="radio" name="q0" value="He going to school every day."> He going to school every day.</label><br>
+<label><input type="radio" name="q0" value="He gone to school every day."> He gone to school every day.</label><br>
+</div>
+
+        <button class="submit-btn" type="button" onclick="checkAnswers()">Submit</button>
     </form>
+    <div id="results"></div>
     <script>
-        function submitQuiz() {
-            const questions = document.querySelectorAll('.question');
-            questions.forEach(q => {
-                const correct = q.dataset.answer;
-                const explanation = q.dataset.explanation;
-                const selected = q.querySelector('input[type="radio"]:checked');
-                if (!selected || selected.value !== correct) {
-                    const explainEl = document.createElement('div');
-                    explainEl.className = 'explanation';
-                    explainEl.textContent = explanation;
-                    q.appendChild(explainEl);
+        function checkAnswers() {
+            const answers = ['He goes to school every day.'];
+            const explanations = ["The subject 'He' requires the verb 'goes' in present tense."];
+            let output = "";
+            const form = document.forms.quizForm;
+            for (let i = 0; i < answers.length; i++) {
+                const chosen = form["q" + i].value;
+                if (chosen === answers[i]) {
+                    output += "<p>Question " + (i + 1) + ": Correct</p>";
+                } else {
+                    output += "<p>Question " + (i + 1) + ": Incorrect<br><span class='explanation'>" + explanations[i] + "</span></p>";
                 }
-            });
+            }
+            document.getElementById("results").innerHTML = output;
         }
     </script>
 </body>
