--- a/index.html
+++ b/index.html
@@ -2,39 +2,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>English Quiz</title>
+    <title>AdaptiveLearn - Home</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        .question { margin-bottom: 20px; }
-        .option { display: block; margin: 5px 0; font-size: 18px; }
-        .submit-btn { font-size: 20px; padding: 10px 20px; }
-    </style>
-    <script>
-        function submitQuiz() {
-            const feedback = document.getElementById('feedback');
-            const answer = document.querySelector('input[name="q1"]:checked');
-            if (!answer) {
-                feedback.innerText = "Please select an answer.";
-                return;
-            }
-            if (answer.value === "C") {
-                feedback.innerText = "Correct!";
-            } else {
-                feedback.innerText = "Incorrect. Explanation: 'Their' shows possession, which is correct here.";
-            }
+        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
+        .subject-btn {
+            display: inline-block;
+            padding: 20px;
+            margin: 20px;
+            font-size: 24px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 12px;
+            cursor: pointer;
+            text-decoration: none;
         }
-    </script>
+    </style>
 </head>
 <body>
-    <h2>English Quiz</h2>
-    <div class="question">
-        <p>1. Which word correctly completes the sentence: 'They forgot ___ books at home.'</p>
-        <label class="option"><input type="radio" name="q1" value="A"> They're</label>
-        <label class="option"><input type="radio" name="q1" value="B"> There</label>
-        <label class="option"><input type="radio" name="q1" value="C"> Their</label>
-        <label class="option"><input type="radio" name="q1" value="D"> Them</label>
-    </div>
-    <button class="submit-btn" onclick="submitQuiz()">Submit</button>
-    <p id="feedback"></p>
+    <h1>Welcome to AdaptiveLearn</h1>
+    <a href="math.html" class="subject-btn">Math</a>
+    <a href="english.html" class="subject-btn">English</a>
+    <a href="science.html" class="subject-btn">Natural Sciences</a>
 </body>
 </html>
