--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>AdaptiveLearn - Home</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-        .subject-btn {
-            display: inline-block;
-            padding: 20px;
-            margin: 20px;
-            font-size: 24px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 12px;
-            cursor: pointer;
-            text-decoration: none;
-        }
-    </style>
-</head>
-<body>
-    <h1>Welcome to AdaptiveLearn</h1>
-    <a href="math.html" class="subject-btn">Math</a>
-    <a href="english.html" class="subject-btn">English</a>
-    <a href="science.html" class="subject-btn">Natural Sciences</a>
-</body>
-</html>
+<!-- Placeholder content for index.html -->
