--- a/english.html
+++ b/english.html
@@ -1,1 +1,11 @@
-<!-- Placeholder content for english.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>English Quiz</title>
+</head>
+<body>
+    <h1>English Quiz</h1>
+    <p>This is a placeholder for the English quiz page.</p>
+</body>
+</html>
