--- a/math.html
+++ b/math.html
@@ -1,1 +1,11 @@
-<!-- Placeholder content for math.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Math Quiz</title>
+</head>
+<body>
+    <h1>Math Quiz</h1>
+    <p>This is a placeholder for the Math quiz page.</p>
+</body>
+</html>
