--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!-- Placeholder content for index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>AdaptiveLearn</title>
+</head>
+<body>
+    <h1>Welcome to AdaptiveLearn</h1>
+    <ul>
+        <li><a href="math.html">Math Quiz</a></li>
+        <li><a href="english.html">English Quiz</a></li>
+        <li><a href="natural_sciences.html">Natural Sciences Quiz</a></li>
+    </ul>
+</body>
+</html>
