--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>AdaptiveLearn</title></head><body><h1>AdaptiveLearn Updated Version</h1></body></html>
+<!-- index.html content for homepage -->
