--- a/math.html
+++ b/math.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Math Quiz</title>
-</head>
-<body>
-    <h1>Math Quiz</h1>
-    <p>This is a placeholder for the Math quiz page.</p>
-</body>
-</html>
+<!-- math.html content for math -->
