--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!-- index.html content for homepage -->
+<!DOCTYPE html><html><head><title>AdaptiveLearn</title></head><body><h1>Welcome to AdaptiveLearn</h1><ul><li><a href='math/quiz.html'>Math Quiz</a></li><li><a href='english/quiz.html'>English Quiz</a></li><li><a href='natural-sciences/quiz.html'>Natural Sciences Quiz</a></li></ul></body></html>
