--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html><head><title>AdaptiveLearn</title></head><body><h1>Welcome to AdaptiveLearn</h1><ul><li><a href='math/quiz.html'>Math Quiz</a></li><li><a href='english/quiz.html'>English Quiz</a></li><li><a href='natural-sciences/quiz.html'>Natural Sciences Quiz</a></li></ul></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AdaptiveLearn</title>
+</head>
+<body>
+  <h1>Welcome to AdaptiveLearn</h1>
+  <ul>
+    <li><a href="quiz-math.html">Math Quiz</a></li>
+    <li><a href="quiz-english.html">English Quiz</a></li>
+    <li><a href="quiz-science.html">Natural Sciences Quiz</a></li>
+  </ul>
+</body>
+</html>
