--- a/english.html
+++ b/english.html
@@ -1,1 +1,24 @@
-<!-- english.html content for english -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>English Quiz</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h2>English Quiz</h2>
+    <form id="english-quiz-form">
+        <p>1. Choose the correct form: "She _____ to the store yesterday."</p>
+        <label><input type="radio" name="q1" value="a"> go</label><br>
+        <label><input type="radio" name="q1" value="b"> goes</label><br>
+        <label><input type="radio" name="q1" value="c"> went</label><br>
+
+        <p>2. Identify the noun in this sentence: "The cat slept on the sofa."</p>
+        <label><input type="radio" name="q2" value="a"> slept</label><br>
+        <label><input type="radio" name="q2" value="b"> cat</label><br>
+        <label><input type="radio" name="q2" value="c"> on</label><br>
+
+        <button type="submit">Submit</button>
+    </form>
+</body>
+</html>
