--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AdaptiveLearn</title>
+    <meta charset="UTF-8">
+    <title>AdaptiveLearn</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to AdaptiveLearn</h1>
-  <ul>
-    <li><a href="quiz-math.html">Math Quiz</a></li>
-    <li><a href="quiz-english.html">English Quiz</a></li>
-    <li><a href="quiz-science.html">Natural Sciences Quiz</a></li>
-  </ul>
+    <h1>Welcome to AdaptiveLearn</h1>
+    <p>Select a subject to start your quiz:</p>
+    <ul>
+        <li><a href="math.html">Math Quiz</a></li>
+        <li><a href="english.html">English Quiz</a></li>
+        <li><a href="natural_sciences.html">Natural Sciences Quiz</a></li>
+    </ul>
 </body>
 </html>
