--- a/math.html
+++ b/math.html
@@ -1,1 +1,24 @@
-<!-- math.html content for math -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Math Quiz</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h2>Math Quiz</h2>
+    <form id="math-quiz-form">
+        <p>1. What is 7 × 8?</p>
+        <label><input type="radio" name="q1" value="a"> 54</label><br>
+        <label><input type="radio" name="q1" value="b"> 56</label><br>
+        <label><input type="radio" name="q1" value="c"> 64</label><br>
+
+        <p>2. Solve for x: 2x + 3 = 11</p>
+        <label><input type="radio" name="q2" value="a"> 4</label><br>
+        <label><input type="radio" name="q2" value="b"> 5</label><br>
+        <label><input type="radio" name="q2" value="c"> 3</label><br>
+
+        <button type="submit">Submit</button>
+    </form>
+</body>
+</html>
