--- a/natural_sciences.html
+++ b/natural_sciences.html
@@ -2,10 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Natural_sciences Quiz</title>
+    <title>Natural Sciences Quiz</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Natural_sciences Quiz</h1>
-    <p>This is a placeholder for the Natural_sciences quiz page.</p>
+    <h2>Natural Sciences Quiz</h2>
+    <form id="science-quiz-form">
+        <p>1. What is the process of water changing from liquid to gas?</p>
+        <label><input type="radio" name="q1" value="a"> Condensation</label><br>
+        <label><input type="radio" name="q1" value="b"> Evaporation</label><br>
+        <label><input type="radio" name="q1" value="c"> Precipitation</label><br>
+
+        <p>2. Which organ pumps blood throughout the body?</p>
+        <label><input type="radio" name="q2" value="a"> Brain</label><br>
+        <label><input type="radio" name="q2" value="b"> Heart</label><br>
+        <label><input type="radio" name="q2" value="c"> Lungs</label><br>
+
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
