--- a/naturalsciences.html
+++ b/naturalsciences.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>English Quiz - AdaptiveLearn</title>
+    <title>NaturalSciences Quiz - AdaptiveLearn</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <h1>English Quiz</h1>
+    <h1>NaturalSciences Quiz</h1>
     <div class="question">
         <p><strong>1. What is the capital of France?</strong></p>
         <label><input type="radio" name="q1">Paris</label><br>
