--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>AdaptiveLearn</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<html>
+<head><title>AdaptiveLearn Subjects</title></head>
 <body>
     <h1>Welcome to AdaptiveLearn</h1>
-    <p>Select a subject to start your quiz:</p>
     <ul>
         <li><a href="math.html">Math Quiz</a></li>
         <li><a href="english.html">English Quiz</a></li>
-        <li><a href="natural_sciences.html">Natural Sciences Quiz</a></li>
+        <li><a href="naturalsciences.html">Natural Sciences Quiz</a></li>
     </ul>
 </body>
 </html>
