--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-<head><title>AdaptiveLearn Subjects</title></head>
-<body>
-    <h1>Welcome to AdaptiveLearn</h1>
-    <ul>
-        <li><a href="math.html">Math Quiz</a></li>
-        <li><a href="english.html">English Quiz</a></li>
-        <li><a href="naturalsciences.html">Natural Sciences Quiz</a></li>
-    </ul>
-</body>
-</html>
+<html><body><h1>Natural Sciences Quiz</h1></body></html>
