--- a/english.html
+++ b/english.html
@@ -1,16 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>English Quiz</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h2>English Quiz</h2>
-  <div id="quiz-container"></div>
-  <button onclick="submitQuiz()">Submit</button>
-  <script src="english.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>English Quiz</title><script src='english.js'></script></head><body><h1>English Quiz</h1><div id='quiz'></div></body></html>
