--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AdaptiveLearn</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <h1>Welcome to AdaptiveLearn</h1>
-  <div class="subject-links">
-    <a href="math.html">Mathematics Quiz</a>
-    <a href="english.html">English Quiz</a>
-    <a href="natural-sciences.html">Natural Sciences Quiz</a>
-  </div>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>AdaptiveLearn</title></head><body><h1>Welcome to AdaptiveLearn</h1><ul><li><a href='math.html'>Math Quiz</a></li><li><a href='english.html'>English Quiz</a></li><li><a href='science.html'>Natural Sciences Quiz</a></li></ul></body></html>
