--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AdaptiveLearn</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<html>
+<head><title>AdaptiveLearn</title></head>
 <body>
-    <h1>Welcome to AdaptiveLearn</h1>
-    <nav>
-        <ul>
-            <li><a href="math.html">Math Quiz</a></li>
-            <li><a href="english.html">English Quiz</a></li>
-            <li><a href="science.html">Natural Sciences Quiz</a></li>
-        </ul>
-    </nav>
+<h1>Welcome to AdaptiveLearn</h1>
+<ul>
+<li><a href="math_quiz/index.html">Math Quiz</a></li>
+<li><a href="english_quiz/index.html">English Quiz</a></li>
+<li><a href="natural_sciences_quiz/index.html">Natural_Sciences Quiz</a></li>
+</ul>
 </body>
 </html>
