--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head><title>AdaptiveLearn</title></head>
-<body>
-<h1>Welcome to AdaptiveLearn</h1>
-<ul>
-<li><a href="math_quiz/index.html">Math Quiz</a></li>
-<li><a href="english_quiz/index.html">English Quiz</a></li>
-<li><a href="natural_sciences_quiz/index.html">Natural_Sciences Quiz</a></li>
-</ul>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>AdaptiveLearn</title></head><body><h1>AdaptiveLearn Home</h1></body></html>
