--- a/maths.html
+++ b/maths.html
@@ -3,10 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>English Quiz</title>
+    <title>Maths Quiz</title>
 </head>
 <body>
-    <h1>English Quiz</h1>
+    <h1>Maths Quiz</h1>
     <p>This page will display 15 real Department of Education–aligned questions.</p>
 </body>
 </html>
