--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>AdaptiveLearn</title>
+  <meta charset="UTF-8">
+  <title>AdaptiveLearn - Math Quiz</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to AdaptiveLearn</h1>
-    <ul>
-        <li><a href="maths.html">Maths Quiz</a></li>
-        <li><a href="english.html">English Quiz</a></li>
-        <li><a href="natural_sciences.html">Natural Sciences Quiz</a></li>
-    </ul>
+  <div class="container">
+    <h1>Math Quiz</h1>
+    <form id="quiz-form"></form>
+    <button id="submit-btn">Submit Answers</button>
+    <div id="results"></div>
+  </div>
+  <script src="questions.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
