--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>AdaptiveLearn - Math Quiz</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+<html>
+<head><title>AdaptiveLearn</title></head>
 <body>
-  <div class="container">
-    <h1>Math Quiz</h1>
-    <form id="quiz-form"></form>
-    <button id="submit-btn">Submit Answers</button>
-    <div id="results"></div>
-  </div>
-  <script src="questions.js"></script>
-  <script src="script.js"></script>
+<h1>Welcome to AdaptiveLearn</h1>
+<ul>
+    <li><a href="quizzes/math.html">Math Quiz</a></li>
+</ul>
 </body>
 </html>
