--- a/english.html
+++ b/english.html
@@ -1,12 +1,32 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>English Quiz</title>
+    <title>English Quiz - AdaptiveLearn</title>
+    <style>
+        body { font-family: Arial; padding: 20px; }
+        .question { margin-bottom: 10px; }
+    </style>
 </head>
 <body>
     <h1>English Quiz</h1>
-    <p>This page will display 15 real Department of Education–aligned questions.</p>
+    <form>
+        <div class='question'><p>1. Choose the correct verb: She ____ to school every day.</p><input type='radio' name='q0'><label>Answer A</label><br><input type='radio' name='q0'><label>Answer B</label><br><input type='radio' name='q0'><label>Answer C</label><br><input type='radio' name='q0'><label>Answer D</label></div><br>
+<div class='question'><p>2. Which is a synonym for 'happy'?</p><input type='radio' name='q1'><label>Answer A</label><br><input type='radio' name='q1'><label>Answer B</label><br><input type='radio' name='q1'><label>Answer C</label><br><input type='radio' name='q1'><label>Answer D</label></div><br>
+<div class='question'><p>3. Identify the adjective: The red car is fast.</p><input type='radio' name='q2'><label>Answer A</label><br><input type='radio' name='q2'><label>Answer B</label><br><input type='radio' name='q2'><label>Answer C</label><br><input type='radio' name='q2'><label>Answer D</label></div><br>
+<div class='question'><p>4. What is the plural of 'mouse'?</p><input type='radio' name='q3'><label>Answer A</label><br><input type='radio' name='q3'><label>Answer B</label><br><input type='radio' name='q3'><label>Answer C</label><br><input type='radio' name='q3'><label>Answer D</label></div><br>
+<div class='question'><p>5. Which word is an interjection?</p><input type='radio' name='q4'><label>Answer A</label><br><input type='radio' name='q4'><label>Answer B</label><br><input type='radio' name='q4'><label>Answer C</label><br><input type='radio' name='q4'><label>Answer D</label></div><br>
+<div class='question'><p>6. Fill in the blank: I have lived here ____ 2010.</p><input type='radio' name='q5'><label>Answer A</label><br><input type='radio' name='q5'><label>Answer B</label><br><input type='radio' name='q5'><label>Answer C</label><br><input type='radio' name='q5'><label>Answer D</label></div><br>
+<div class='question'><p>7. Identify the noun: He threw the ball.</p><input type='radio' name='q6'><label>Answer A</label><br><input type='radio' name='q6'><label>Answer B</label><br><input type='radio' name='q6'><label>Answer C</label><br><input type='radio' name='q6'><label>Answer D</label></div><br>
+<div class='question'><p>8. Which sentence is punctuated correctly?</p><input type='radio' name='q7'><label>Answer A</label><br><input type='radio' name='q7'><label>Answer B</label><br><input type='radio' name='q7'><label>Answer C</label><br><input type='radio' name='q7'><label>Answer D</label></div><br>
+<div class='question'><p>9. Choose the correct homophone: Their/There/They’re house is big.</p><input type='radio' name='q8'><label>Answer A</label><br><input type='radio' name='q8'><label>Answer B</label><br><input type='radio' name='q8'><label>Answer C</label><br><input type='radio' name='q8'><label>Answer D</label></div><br>
+<div class='question'><p>10. What is the past tense of 'go'?</p><input type='radio' name='q9'><label>Answer A</label><br><input type='radio' name='q9'><label>Answer B</label><br><input type='radio' name='q9'><label>Answer C</label><br><input type='radio' name='q9'><label>Answer D</label></div><br>
+<div class='question'><p>11. Which word is a conjunction?</p><input type='radio' name='q10'><label>Answer A</label><br><input type='radio' name='q10'><label>Answer B</label><br><input type='radio' name='q10'><label>Answer C</label><br><input type='radio' name='q10'><label>Answer D</label></div><br>
+<div class='question'><p>12. Find the antonym of 'cold'.</p><input type='radio' name='q11'><label>Answer A</label><br><input type='radio' name='q11'><label>Answer B</label><br><input type='radio' name='q11'><label>Answer C</label><br><input type='radio' name='q11'><label>Answer D</label></div><br>
+<div class='question'><p>13. What type of sentence is this: Wow, that’s amazing!</p><input type='radio' name='q12'><label>Answer A</label><br><input type='radio' name='q12'><label>Answer B</label><br><input type='radio' name='q12'><label>Answer C</label><br><input type='radio' name='q12'><label>Answer D</label></div><br>
+<div class='question'><p>14. Choose the correct article: ___ apple a day keeps the doctor away.</p><input type='radio' name='q13'><label>Answer A</label><br><input type='radio' name='q13'><label>Answer B</label><br><input type='radio' name='q13'><label>Answer C</label><br><input type='radio' name='q13'><label>Answer D</label></div><br>
+<div class='question'><p>15. What is the subject in the sentence: The dog barked loudly.</p><input type='radio' name='q14'><label>Answer A</label><br><input type='radio' name='q14'><label>Answer B</label><br><input type='radio' name='q14'><label>Answer C</label><br><input type='radio' name='q14'><label>Answer D</label></div><br>
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
