--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <html>
 <head><title>AdaptiveLearn</title></head>
 <body>
-<h1>Welcome to AdaptiveLearn</h1>
-<ul>
-    <li><a href="quizzes/math.html">Math Quiz</a></li>
-</ul>
+    <h1>Welcome to AdaptiveLearn</h1>
+    <ul>
+        <li><a href="math.html">Math Quiz</a></li>
+        <li><a href="english.html">English Quiz</a></li>
+        <li><a href="natural_sciences.html">Natural Sciences Quiz</a></li>
+    </ul>
 </body>
 </html>
