--- a/math.html
+++ b/math.html
@@ -1,49 +1,32 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Math Quiz</title>
+    <title>Math Quiz - AdaptiveLearn</title>
     <style>
         body { font-family: Arial; padding: 20px; }
-        .question { margin-bottom: 20px; }
-        .explanation { display: none; color: green; }
-        button { margin-top: 20px; padding: 10px 20px; font-size: 16px; }
+        .question { margin-bottom: 10px; }
     </style>
 </head>
 <body>
-    <h1>Math Quiz (15 Questions)</h1>
-    <form id="quizForm">
-        <div class="question" data-answer="B">
-            <p>1. What is the value of 5 + 3 × 2?</p>
-            <label><input type="radio" name="q1" value="A"> 16</label><br>
-            <label><input type="radio" name="q1" value="B"> 11</label><br>
-            <label><input type="radio" name="q1" value="C"> 10</label><br>
-            <div class="explanation">Explanation: Use order of operations (PEMDAS). 3 × 2 = 6, then 5 + 6 = 11.</div>
-        </div>
-        <div class="question" data-answer="A">
-            <p>2. What is the area of a rectangle with length 7 cm and width 3 cm?</p>
-            <label><input type="radio" name="q2" value="A"> 21 cm²</label><br>
-            <label><input type="radio" name="q2" value="B"> 10 cm²</label><br>
-            <label><input type="radio" name="q2" value="C"> 24 cm²</label><br>
-            <div class="explanation">Explanation: Area = length × width = 7 × 3 = 21 cm².</div>
-        </div>
-        <!-- Add 13 more real-style questions similarly -->
-        <!-- Placeholder for simplicity. These will be replaced with full questions in the next step. -->
+    <h1>Math Quiz</h1>
+    <form>
+        <div class='question'><p>1. What is the value of 7 × 8?</p><input type='radio' name='q0'><label>Answer A</label><br><input type='radio' name='q0'><label>Answer B</label><br><input type='radio' name='q0'><label>Answer C</label><br><input type='radio' name='q0'><label>Answer D</label></div><br>
+<div class='question'><p>2. Simplify: 3(2x + 4) = ?</p><input type='radio' name='q1'><label>Answer A</label><br><input type='radio' name='q1'><label>Answer B</label><br><input type='radio' name='q1'><label>Answer C</label><br><input type='radio' name='q1'><label>Answer D</label></div><br>
+<div class='question'><p>3. What is the area of a triangle with base 10 cm and height 5 cm?</p><input type='radio' name='q2'><label>Answer A</label><br><input type='radio' name='q2'><label>Answer B</label><br><input type='radio' name='q2'><label>Answer C</label><br><input type='radio' name='q2'><label>Answer D</label></div><br>
+<div class='question'><p>4. Convert 0.75 to a fraction.</p><input type='radio' name='q3'><label>Answer A</label><br><input type='radio' name='q3'><label>Answer B</label><br><input type='radio' name='q3'><label>Answer C</label><br><input type='radio' name='q3'><label>Answer D</label></div><br>
+<div class='question'><p>5. Solve: 2x – 5 = 11</p><input type='radio' name='q4'><label>Answer A</label><br><input type='radio' name='q4'><label>Answer B</label><br><input type='radio' name='q4'><label>Answer C</label><br><input type='radio' name='q4'><label>Answer D</label></div><br>
+<div class='question'><p>6. What is the perimeter of a rectangle 5m by 3m?</p><input type='radio' name='q5'><label>Answer A</label><br><input type='radio' name='q5'><label>Answer B</label><br><input type='radio' name='q5'><label>Answer C</label><br><input type='radio' name='q5'><label>Answer D</label></div><br>
+<div class='question'><p>7. What is 20% of 150?</p><input type='radio' name='q6'><label>Answer A</label><br><input type='radio' name='q6'><label>Answer B</label><br><input type='radio' name='q6'><label>Answer C</label><br><input type='radio' name='q6'><label>Answer D</label></div><br>
+<div class='question'><p>8. Find the mean of 4, 8, 6, 10.</p><input type='radio' name='q7'><label>Answer A</label><br><input type='radio' name='q7'><label>Answer B</label><br><input type='radio' name='q7'><label>Answer C</label><br><input type='radio' name='q7'><label>Answer D</label></div><br>
+<div class='question'><p>9. Which is a prime number: 4, 6, 9, 11?</p><input type='radio' name='q8'><label>Answer A</label><br><input type='radio' name='q8'><label>Answer B</label><br><input type='radio' name='q8'><label>Answer C</label><br><input type='radio' name='q8'><label>Answer D</label></div><br>
+<div class='question'><p>10. Find x: x² = 49</p><input type='radio' name='q9'><label>Answer A</label><br><input type='radio' name='q9'><label>Answer B</label><br><input type='radio' name='q9'><label>Answer C</label><br><input type='radio' name='q9'><label>Answer D</label></div><br>
+<div class='question'><p>11. What is the square root of 64?</p><input type='radio' name='q10'><label>Answer A</label><br><input type='radio' name='q10'><label>Answer B</label><br><input type='radio' name='q10'><label>Answer C</label><br><input type='radio' name='q10'><label>Answer D</label></div><br>
+<div class='question'><p>12. Write 2/5 as a decimal.</p><input type='radio' name='q11'><label>Answer A</label><br><input type='radio' name='q11'><label>Answer B</label><br><input type='radio' name='q11'><label>Answer C</label><br><input type='radio' name='q11'><label>Answer D</label></div><br>
+<div class='question'><p>13. What is the volume of a cube with side 3 cm?</p><input type='radio' name='q12'><label>Answer A</label><br><input type='radio' name='q12'><label>Answer B</label><br><input type='radio' name='q12'><label>Answer C</label><br><input type='radio' name='q12'><label>Answer D</label></div><br>
+<div class='question'><p>14. What is 3 to the power of 4?</p><input type='radio' name='q13'><label>Answer A</label><br><input type='radio' name='q13'><label>Answer B</label><br><input type='radio' name='q13'><label>Answer C</label><br><input type='radio' name='q13'><label>Answer D</label></div><br>
+<div class='question'><p>15. How many degrees in a right angle?</p><input type='radio' name='q14'><label>Answer A</label><br><input type='radio' name='q14'><label>Answer B</label><br><input type='radio' name='q14'><label>Answer C</label><br><input type='radio' name='q14'><label>Answer D</label></div><br>
+        <button type="submit">Submit</button>
     </form>
-    <button type="button" onclick="submitQuiz()">Submit</button>
-    <script>
-        function submitQuiz() {
-            let questions = document.querySelectorAll('.question');
-            questions.forEach(q => {
-                let answer = q.getAttribute('data-answer');
-                let selected = q.querySelector('input:checked');
-                if (selected && selected.value !== answer) {
-                    q.querySelector('.explanation').style.display = 'block';
-                }
-            });
-            alert("Quiz submitted. Explanations shown for incorrect answers.");
-        }
-    </script>
 </body>
 </html>
