--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
+
 <!DOCTYPE html>
-<html>
-<head><title>AdaptiveLearn Subjects</title></head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>AdaptiveLearn - Natural Sciences</title>
+</head>
 <body>
-<h1>Subjects</h1>
-<ul>
-  <li><a href="math.html">Math</a></li>
-  <li><a href="english.html">English</a></li>
-  <li><a href="science.html">Natural Sciences</a></li>
-</ul>
+    <h1>Welcome to the Natural Sciences Quiz</h1>
+    <a href="science.html">Start the Quiz</a>
 </body>
 </html>
