--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
+
 <!DOCTYPE html>
 <html>
-<head><title>AdaptiveLearn Subjects</title></head>
+<head>
+    <title>AdaptiveLearn</title>
+    <meta charset="UTF-8" />
+</head>
 <body>
-<h1>Subjects</h1>
-<ul>
-  <li><a href="math.html">Math</a></li>
-  <li><a href="english.html">English</a></li>
-  <li><a href="science.html">Natural Sciences</a></li>
-</ul>
+    <h1>Welcome to AdaptiveLearn</h1>
+    <ul>
+        <li><a href="math.html">Math Quiz</a></li>
+        <li><a href="english.html">English Quiz</a></li>
+        <li><a href="science.html">Natural Sciences Quiz</a></li>
+    </ul>
 </body>
 </html>
